fixed table border (thread) on mobile view

--- a/src/components/AllResults/Table/style.scss
+++ b/src/components/AllResults/Table/style.scss
@@ -6,11 +6,11 @@
   table-layout: fixed;
   width: calc(100% + calc($gridGap * 2));
   font-size: 1.4rem;
-  margin: $gridGap (-$gridGap) 0 (-$gridGap);
+  margin: 0 (-$gridGap) 0 (-$gridGap);
   padding: 0;
 
   th,
   td {
-    border: 0.5px solid rgb(24, 24, 24);
+    border: 1px solid rgb(24, 24, 24, 0.4);
   }
 }
